@@ -28,6 +28,7 @@
 (require 'haskell-mode)
 (require 'haskell-session)
 (require 'haskell-compat)
+(require 'haskell-str)
 (with-no-warnings (require 'cl))
 
 ;; FIXME: haskell-process shouldn't depend on haskell-interactive-mode to avoid module-dep cycles
@@ -819,6 +820,24 @@ This uses `accept-process-output' internally."
       (haskell-process-queue-command process cmd)
       (haskell-process-queue-flush process)
       (car-safe (haskell-command-state cmd))))
+
+(defun haskell-process-get-repl-completions (process inputstr)
+  "Perform `:complete repl ...' query for INPUTSTR using PROCESS."
+  (let* ((reqstr (concat ":complete repl "
+                         (haskell-str-literal-encode inputstr)))
+         (rawstr (haskell-process-queue-sync-request process reqstr)))
+    (if (string-prefix-p "unknown command " rawstr)
+        (error "GHCi lacks `:complete' support")
+      (let* ((s1 (split-string rawstr "\r?\n"))
+             (cs (mapcar #'haskell-str-literal-decode (cdr s1)))
+             (h0 (car s1))) ;; "<cnt1> <cnt2> <quoted-str>"
+           (unless (string-match "\\`\\([0-9]+\\) \\([0-9]+\\) \\(\".*\"\\)\\'" h0)
+             (error "Invalid `:complete' response"))
+           (let ((cnt1 (match-string 1 h0))
+                 (h1 (haskell-str-literal-decode (match-string 3 h0))))
+             (unless (= (string-to-number cnt1) (length cs))
+               (error "Lengths inconsistent in `:complete' reponse"))
+             (cons h1 cs))))))
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ;; Accessing the process
